<resources>
    <string name="app_name">Eat Sleep And Repeat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Login-->
    <string name="txtLogin">Log in</string>
    <string name="txtUsername">Username</string>
    <string name="txtPassword">Password</string>
    <string name="txtCreateAccount">Create an account</string>
    <string name="txtDontAccount">You don\'t have account?</string>

    <!-- Register-->
    <string name="txtRegister">Register</string>
    <string name="txtMail">Mail</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <!--Cart-->
    <string name="txtCart">Cart</string>
    <string name="txtTotal">Total:</string>
    <string name="txtCheckout">Checkout</string>
    <string name="removeOrder">Clean</string>
    <string name="alertDelete">Tht order will be delete permanently</string>
    <string name="confirmation">Do you want to continue?</string>
    <string name="deletedOrder">Order successfully deleted</string>

    <!--Category-->
    <string name="txtCategories">Categories</string>
    <string name="title_activity_categories">Categories_Activity</string>

    <!--Products-->
    <string name="txtAddProducts">Add to cart</string>

    <!--Tabs-->
    <string name="tabPizzas">Pizzas</string>
    <string name="tabAppetizers">Appetizers</string>
    <string name="tabDesserts">Desserts</string>
    <string name="tabDrinks">Drinks</string>
    <string name="title_activity_tabbed">tabbed</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="addedProduct">The item was added correctly</string>

    <string-array name="size">
        <item>Select to choose size</item>
        <item name="b">Big</item>
        <item name="m">Medium</item>
        <item name="s">Small</item>
    </string-array>

</resources>