<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".FragmentRegister">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtMailLogin"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_login_username"
                    android:drawablePadding="20dp"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/txtUsername"
                    android:includeFontPadding="true"
                    android:padding="20dp"
                    android:paddingStart="30dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="20dp"
                    android:text="123"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/txtUserNameRegister"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_login_username"
                    android:drawablePadding="20dp"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/txtMail"
                    android:includeFontPadding="true"
                    android:inputType="textPersonName"
                    android:padding="20dp"
                    android:paddingStart="30dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="20dp"
                    android:text="123"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtMailLogin" />

                <EditText
                    android:id="@+id/txtPwdRegister"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_login_username"
                    android:drawablePadding="20dp"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/txtPassword"
                    android:includeFontPadding="true"
                    android:inputType="textPersonName"
                    android:padding="20dp"
                    android:paddingStart="30dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="20dp"
                    android:text="123"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtUserNameRegister" />

                <Button
                    android:id="@+id/btnCreateAccount"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/orange"
                    android:elevation="5dp"
                    android:padding="20dp"
                    android:paddingStart="30dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="20dp"
                    android:text="@string/txtCreateAccount"
                    android:translationY="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtPwdRegister" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>