<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="412dp"
        android:layout_height="730dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/imgLayout"
                android:layout_width="match_parent"
                android:layout_height="199dp">

                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="118dp"
                    android:layout_height="122dp"
                    android:layout_marginTop="80dp"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/logo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_register"
                android:layout_width="match_parent"
                android:layout_height="556dp"
                android:foregroundTint="@color/yellow">

                <EditText
                    android:id="@+id/txtUserNameRegister"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_register_createanaccount"
                    android:drawablePadding="20dp"
                    android:hint="@string/txtUsername"
                    android:ems="10"
                    android:padding="20dp"
                    android:paddingStart="30dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="20dp"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtRegisterTitle" />

                <TextView
                    android:id="@+id/txtRegisterTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="top"
                    android:lineSpacingExtra="2sp"
                    android:text="@string/txtRegister"
                    android:textColor="@color/black"
                    android:textSize="48sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/txtMailRegister"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_register_createanaccount"
                    android:ems="10"
                    android:hint="@string/txtMail"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="20dp"
                    android:paddingStart="30dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="20dp"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtUserNameRegister" />

                <EditText
                    android:id="@+id/txtPasswordRegister"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_register_createanaccount"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:drawablePadding="20dp"
                    android:includeFontPadding="true"
                    android:padding="20dp"
                    android:paddingStart="30dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="20dp"
                    android:textSize="14sp"
                    android:hint="@string/txtPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtMailRegister" />

                <Button
                    android:id="@+id/btnCreateAccount"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/orange"
                    android:elevation="5dp"
                    android:padding="20dp"
                    android:paddingStart="30dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="20dp"
                    android:textSize="14sp"
                    android:text="@string/txtCreateAccount"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtPasswordRegister" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
