<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_register_createanaccount">

    <ScrollView
        android:layout_width="412dp"
        android:layout_height="730dp"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/imgLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="163dp"
                    android:layout_height="137dp"
                    android:layout_marginTop="80dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/ic_logo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="556dp"
                android:foregroundTint="@color/yellow">

                <EditText
                    android:id="@+id/txtMailRegister"
                    android:layout_width="328dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/custom_register_createanaccount"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="20dp"
                    android:paddingStart="30dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="20dp"
                    android:text="@string/txtMail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtUserNameRegister" />

                <EditText
                    android:id="@+id/txtPaswordRegister"
                    android:layout_width="328dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/custom_register_createanaccount"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="20dp"
                    android:paddingStart="30dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="20dp"
                    android:text="@string/txtPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtMailRegister" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/txtRegister"
                    android:textColor="@color/black"
                    android:textSize="48sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/txtUserNameRegister"
                    android:layout_width="328dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="21dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/custom_register_createanaccount"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:padding="20dp"
                    android:paddingStart="30dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="20dp"
                    android:text="@string/txtUsername"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <Button
                    android:id="@+id/btnSigIn2"
                    android:layout_width="321dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:backgroundTint="@color/orange"
                    android:text="Button"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="405dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
